--- a/docs/developer-docs/latest/developer-resources/content-api/integrations/11ty.md
+++ b/docs/developer-docs/latest/developer-resources/content-api/integrations/11ty.md
@@ -41,8 +41,8 @@ npx @11ty/eleventy
 
 11ty do not create any file structure for you. It's up to you to do it.
 
-- Create a `./src/_data` folder containing a `categories.js` and a `restaurants.js` file. They will be used to fetch your content from Strapi.
-- Create a `./src/_templates` folder containing a `default.liquid` file. It will be the default template of your project.
+- 创建 a `./src/_data` folder containing a `categories.js` and a `restaurants.js` file. They will be used to fetch your content from Strapi.
+- 创建 a `./src/_templates` folder containing a `default.liquid` file. It will be the default template of your project.
 
 ```html
 <!DOCTYPE html>
@@ -62,8 +62,8 @@ npx @11ty/eleventy
 </html>
 ```
 
-- Create a `./src/index.md`, `./src/restaurant.md` and a `./src/categorie.md` file. They will define how you'll present the data.
-- Create a `.eleventy.js` file containing the following (make sure to prefix the file's name with the dot):
+- 创建 a `./src/index.md`, `./src/restaurant.md` and a `./src/categorie.md` file. They will define how you'll present the data.
+- 创建 a `.eleventy.js` file containing the following (make sure to prefix the file's name with the dot):
 
 ```js
 const HtmlMin = require('html-minifier');
